<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_todo_item_popup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.stefanm.webtodo.activities.EditTodoItemPopupActivity">

    <EditText
        android:layout_width="327dp"
        android:layout_height="335dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/et_editTodoItem"
        android:text="@string/todoitem_default_short_contents"
        android:selectAllOnFocus="false"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="top|left"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        android:scrollbarAlwaysDrawHorizontalTrack="false" />

    <Button
        android:text="@string/save"
        android:layout_width="164dp"
        android:layout_height="68dp"
        android:id="@+id/btn_save"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/cb_completed" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_bin"
        android:id="@+id/btn_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/cb_completed"
        android:contentDescription="@string/trashcan_icon_desc" />

    <CheckBox
        android:text="@string/completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb_completed"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/et_editTodoItem"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
