<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/todoitem_default_short_contents"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_contents_short"
        android:textStyle="normal|bold"
        android:maxLines="10"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/cb_completed"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb_completed"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:text="@string/todoitem_default_date"
        android:layout_width="154dp"
        android:layout_height="23dp"
        android:id="@+id/tv_modified"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_contents_short"
        app:layout_constraintLeft_toRightOf="@+id/cb_completed"
        android:layout_marginStart="8dp" />

    <TextView
        android:text="@string/todoitem_default_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_userName"
        android:layout_marginStart="104dp"
        app:layout_constraintLeft_toRightOf="@+id/tv_modified"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_contents_short" />
</android.support.constraint.ConstraintLayout>